--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 
 <!-- Actividad 4 -->
 <div id="activity-4" class="activity">
-    <div class="banner" onclick="toggleContent('formacion-parejas')">
+    <div class="banner" onclick="toggleContent('formacion_parejas')">
         <div class="title">🤝 Actividad 4: Formación de Parejas ⏰ Tiempo: 3 minutos</div>
         <div class="subtitle">Explicar la importancia del trabajo en equipo en parejas y asegurar la organización.</div>
     </div>
@@ -265,23 +265,24 @@
 
     </div>
 
-<script>
-    function toggleContent(id) {
-        var content = document.getElementById(id);
-        if (content.style.display === "block") {
-            content.style.display = "none";
+    <script>
+        function toggleContent(id) {
+            var content = document.getElementById(id);
+            if (content.style.display === "block") {
+                content.style.display = "none";
             } else {
-            content.style.display = "block";
+                content.style.display = "block";
+            }
         }
-    }
 
-    function updateContent() {
-        var time = document.getElementById("class-time").value;
-        var level = document.getElementById("class-level").value;
-        document.getElementById("selected-time").innerText = "Tiempo efectivo de clase: " + time + " minutos";
-        document.getElementById("selected-level").innerText = "Nivel: " + level;
+        function updateContent() {
+            var time = document.getElementById("class-time").value;
+            var level = document.getElementById("class-level").value;
+            document.getElementById("selected-time").innerText = "Tiempo efectivo de clase: " + time + " minutos";
+            document.getElementById("selected-level").innerText = "Nivel: " + level;
 
-        var steps = {
+            var steps = {
+              // PASTE YOUR EXISTING 'steps' OBJECT HERE
     "K1": {
         "5.1": [
             {
@@ -432,66 +433,67 @@
             }
         ]
     }
-};
+           };
+
+           // Mostrar u ocultar actividades según el nivel seleccionado
+            var activities = {
+                "activity-0": true,
+                "activity-1": true,
+                "activity-2": true,
+                "activity-3": true,
+                "activity-4": true,
+                "activity-5": true,
+                "activity-6": true,
+                "activity-7": true,
+                "activity-8": true
+            };
+
+             Object.keys(activities).forEach(function(activityId) {
+                var activityElement = document.getElementById(activityId);
+                if (activities[activityId]) {
+                    activityElement.style.display = "block";
+                } else {
+                    activityElement.style.display = "none";
+                }
+            });
 
 
+            // Renderizar los pasos dinámicamente en las tablas de actividades 5, 6 y 7
+            renderActivitySteps("activity-5-content", steps[level]["5." + (level === "K1" ? 1 : level === "K2" ? 2 : 3)], time);
+            renderActivitySteps("activity-6-content", steps[level]["6"], time);
+            renderActivitySteps("activity-7-content", steps[level]["7"], time);
 
-        // Mostrar u ocultar actividades según el nivel seleccionado
-        var activities = {
-            "activity-0": true,
-            "activity-1": true,
-            "activity-2": true,
-            "activity-3": true,
-            "activity-4": true,
-            "activity-5": true,
-            "activity-6": true,
-            "activity-7": steps[level]["7"].some(s => s.time[time] > 0),
-            "activity-8": true
-        };
+            document.getElementById("activity-5-total-time").innerText = calculateTotalTime(steps[level]["5." + (level === "K1" ? 1 : level === "K2" ? 2 : 3)], time) + " minutos";
+            document.getElementById("activity-6-total-time").innerText = calculateTotalTime(steps[level]["6"], time) + " minutos";
+            document.getElementById("activity-7-total-time").innerText = calculateTotalTime(steps[level]["7"], time) + " minutos";
+        }
 
-        Object.keys(activities).forEach(function(activityId) {
-            var activityElement = document.getElementById(activityId);
-            if (activities[activityId]) {
-                activityElement.style.display = "block";
-            } else {
-                activityElement.style.display = "none";
-            }
+        function renderActivitySteps(contentId, steps, time) {
+            var contentContainer = document.getElementById(contentId);
+            contentContainer.innerHTML = "";
+            steps.forEach(function(step) {
+                if (step.time[time] > 0) {
+                    var row = document.createElement("tr");
+                    var stepCell = document.createElement("td");
+                    var dialogCell = document.createElement("td");
+
+                    stepCell.innerHTML = "<strong>PASO " + step.step + " (" + step.time[time] + " minutos):</strong> " + step.accion;
+                    dialogCell.innerHTML = "<strong>DIÁLOGO SUGERIDO:</strong> " + step.dialogo;
+
+                    row.appendChild(stepCell);
+                    row.appendChild(dialogCell);
+                    contentContainer.appendChild(row);
+                }
+            });
+        }
+
+        function calculateTotalTime(steps, time) {
+            return steps.reduce((total, step) => total + step.time[time], 0);
+        }
+
+        document.addEventListener('DOMContentLoaded', function() {
+            updateContent();
         });
-
-        // Renderizar los pasos dinámicamente en las tablas de actividades 5, 6 y 7
-        renderActivitySteps("activity-5-content", steps[level]["5." + (level === "K1" ? 1 : level === "K2" ? 2 : 3)], time);
-        renderActivitySteps("activity-6-content", steps[level]["6"], time);
-        renderActivitySteps("activity-7-content", steps[level]["7"], time);
-
-        document.getElementById("activity-5-total-time").innerText = calculateTotalTime(steps[level]["5." + (level === "K1" ? 1 : level === "K2" ? 2 : 3)], time) + " minutos";
-        document.getElementById("activity-6-total-time").innerText = calculateTotalTime(steps[level]["6"], time) + " minutos";
-        document.getElementById("activity-7-total-time").innerText = calculateTotalTime(steps[level]["7"], time) + " minutos";
-    }
-
-    function renderActivitySteps(contentId, steps, time) {
-        var contentContainer = document.getElementById(contentId);
-        contentContainer.innerHTML = "";
-        steps.forEach(function(step) {
-            if (step.time[time] > 0) {
-                var row = document.createElement("tr");
-                var stepCell = document.createElement("td");
-                var dialogCell = document.createElement("td");
-
-                stepCell.innerHTML = "<strong>PASO " + step.step + " (" + step.time[time] + " minutos):</strong> " + step.accion;
-                dialogCell.innerHTML = "<strong>DIÁLOGO SUGERIDO:</strong> " + step.dialogo;
-
-                row.appendChild(stepCell);
-                row.appendChild(dialogCell);
-                contentContainer.appendChild(row);
-            }
-        });
-    }
-
-    function calculateTotalTime(steps, time) {
-        return steps.reduce((total, step) => total + step.time[time], 0);
-    }
-
-    updateContent();
-</script>
+    </script>
 </body>
 </html>
